fix de fecha en las tarjetas de los cursos del sidebar

--- a/src/templates/cursos/cursos_disponibles.html
+++ b/src/templates/cursos/cursos_disponibles.html
@@ -327,7 +327,7 @@
                         
                         <div class="comision-details-grid">
                             <div class="detail-row" title="Fecha de inicio">
-                                <span>📅</span> {{ comision.fecha_inicio|date:"d/m"|default:"--" }}
+                                <span>📅</span> Inicia el {{ comision.fecha_inicio|date:"d/m"|default:"--" }}
                             </div>
                             <div class="detail-row" title="Horario">
                                 <span>⏰</span> {{ comision.dias_horarios|default:"--" }}
