--- a/src/templates/usuario/registro.html
+++ b/src/templates/usuario/registro.html
@@ -342,7 +342,11 @@
                 </div>
 
                 <div class="form-row">
-                    <div class="form-group" style="grid-column: span 2;">
+                    <div class="form-group">
+                        <label for="zona_residencia">Zona/Barrio</label>
+                        <input type="text" id="zona_residencia" name="zona_residencia" placeholder="Ej: Centro, Chacra II">
+                    </div>
+                    <div class="form-group">
                         <label for="domicilio">Domicilio</label>
                         <input type="text" id="domicilio" name="domicilio" placeholder="Calle 123">
                     </div>
